--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "tech.billshi.assignment1"
+        applicationId "tech.billshi.assignment1demo"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
